# CIgelCompiler

./: .gitattributes  .gitignore  BDWGC_LICENSE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LLVM_LICENSE.md  Makefile  README.md  SECURITY.md  build.igc  build.ninja  build.sh  buildtest.sh  out  test.ig
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cmake-multi-platform.yml
includeTest/: test.h
src/: Info.h  SelfInfo.h  generator.hpp  main.cpp  parsed.h  parser.hpp  preGenerator.hpp  toAsm.hpp  tokenizer.cpp  tokenizer.h  tokenizer.hpp  types.h
src/CompilerInfo/: CompilerInfo.hpp  InfoParser.cpp  InfoParser.h  OptionsParser.cpp  OptionsParser.h
src/cxx_extension/: CXX_Parser.cpp  CXX_Parser.h
src/exceptionns/: GeneratedException.cpp  GeneratedException.h  Generator.h
src/langMain/: fileCompiler.hpp  generator.hpp  langMain.hpp  parser.hpp  preGenerator.hpp  preParser.hpp
src/langMain/codeGen/: Generator.cpp  Generator.h  types.cpp
src/langMain/parsing/: Indexer.cpp  Indexer.h  Parser.cpp  Parser.h  PreParser.cpp  PreParser.h
src/util/: File.hpp  Mangler.cpp  Mangler.h  Process.cpp  Process.h  String.cpp  String.h  arena.hpp
srcLib/: Array.cpp  Array.h  Exception.cpp  Exception.h  String.cpp  String.h
tasks/: next.txt
tstsrc/: exception.ig  main.ig  main.igl  string.ig  test.ig
